renderCards successfully renders and rerenders

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
 <body>
     <div class="proset-game">
-        <div class="proset-card" card-id="111110">
+        <div class="proset-row" id="proset-row-0">
+        </div>
+        <div class="proset-row" id="proset-row-1">
+        </div>
+        <div class="proset-row" id="proset-row-2">
         </div>
     </div>
     <script src="scripts/main.js"></script>
