--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
 <body>
     <div class="proset-game">
         <div class="proset-rows">
-            <div class="proset-row" id="proset-row-0">
-            </div>
-            <div class="proset-row" id="proset-row-1">
-            </div>
-            <div class="proset-row" id="proset-row-2">
-            </div>
+            <div class="proset-row" id="proset-row-0"></div>
+            <div class="proset-row" id="proset-row-1"></div>
+            <div class="proset-row" id="proset-row-2"></div>
         </div>
     </div>
     <script src="scripts/main.js"></script>
