--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>ProSet</title>
     <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="height=750px, width=400px, initial-scale=0.86">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -26,7 +26,11 @@
                 <div class="proset-row" id="proset-row-0"></div>
                 <div class="proset-row" id="proset-row-1"></div>
                 <div class="proset-row" id="proset-row-2"></div>
+                <div class="proset-buttons">
+                    <input type="button" class="proset-button" value="Reveal" onclick="revealSolution()">
+                    <input type="button" class="proset-button" value="Clear" onclick="clearSelected()">
+                    <input type="button" class="proset-button" value="Enter" onclick="enterGuess()">
+                </div>
         </div>
-        <input type="button" class="proset-enter" value="Enter" onclick="enterGuess()">
     <script src="scripts/main.js"></script>
 </body>
