--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ProSet</title>
     <meta name="author" content="">
     <meta name="viewport" content="height=750px, width=400px, initial-scale=0.86">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
