--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 <body>
     <div class="proset-game" id="proset-game">
-        <div class="proset-title-line">
-            <span class="proset-title">ProSet</span>
+        <div class="proset-title-line" id="proset-title-line">
+            <span class="proset-title" id="proset-title">ProSet</span>
             <div class="proset-score-line">
                 <span class="proset-score">Score: </span>
                 <span class="proset-score" id="score-num">0</span>
@@ -39,5 +39,82 @@
             <div class="proset-row" id="proset-row-2"></div>
             <div class="proset-buttons" id="proset-buttons"></div>
         </div>
-        <script src="scripts/main.js"></script>
+    </div>
+    <div class="about-modal" id="about-modal">
+        <div class="about-content">
+            <div>
+                <span class="about-close" id="about-close">&times;</span>
+            </div>
+            <div class="about-item">
+                <div class="about-item-divider">
+                    <h1>How To Play</h1>
+                    <hr noshade>
+                    <p>The goal of the game is to collect as many sets as possible. A set consists of some subset of the showing cards, where each color appears an even number of times. For example, the following cards form a set:</p>
+                    <div class="proset-row" style="display: flex; flex-wrap: wrap; justify-content: space-evenly; gap: 0;">
+                        <div class="proset-card example">
+                            <div class="proset-dots">
+                                <div class="proset-empty-dot"></div>
+                                <div class="proset-dot" style="background-color: var(--color1);"></div>
+                                <div class="proset-dot" style="background-color: var(--color2);"></div>
+                                <div class="proset-dot" style="background-color: var(--color3);"></div>
+                                <div class="proset-dot" style="background-color: var(--color4); visibility: hidden;"></div>
+                                <div class="proset-dot" style="background-color: var(--color5); visibility: hidden;"></div>
+                                <div class="proset-dot" style="background-color: var(--color6); visibility: hidden;"></div>
+                            </div>
+                        </div>
+                        <div class="proset-card example">
+                            <div class="proset-dots">
+                                <div class="proset-empty-dot"></div>
+                                <div class="proset-dot" style="background-color: var(--color1);"></div>
+                                <div class="proset-dot" style="background-color: var(--color2); visibility: hidden;"></div>
+                                <div class="proset-dot" style="background-color: var(--color3);"></div>
+                                <div class="proset-dot" style="background-color: var(--color4); visibility: hidden;"></div>
+                                <div class="proset-dot" style="background-color: var(--color5);"></div>
+                                <div class="proset-dot" style="background-color: var(--color6); visibility: hidden;"></div>
+                            </div>
+                        </div>
+                        <div class="proset-card example">
+                            <div class="proset-dots">
+                                <div class="proset-empty-dot"></div>
+                                <div class="proset-dot" style="background-color: var(--color1); visibility: hidden;"></div>
+                                <div class="proset-dot" style="background-color: var(--color2);"></div>
+                                <div class="proset-dot" style="background-color: var(--color3); visibility: hidden;"></div>
+                                <div class="proset-dot" style="background-color: var(--color4); visibility: hidden;"></div>
+                                <div class="proset-dot" style="background-color: var(--color5);"></div>
+                                <div class="proset-dot" style="background-color: var(--color6); visibility: hidden;"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Each card collected in a set counts towards your score.</p>
+                </div>
+                <div class="about-item-divider">
+                    <h1>Controls</h1>
+                    <hr noshade>
+                    <div>
+                        <p>Use a mouse, touch, or keyboard input to select cards and activate the following buttons:</p>
+                        <div style="display: flex; align-items: center; gap: var(--ten-units);">
+                            <a class="proset-button">
+                                <span>Enter</span>
+                            </a>
+                            <p>(Enter key) Enters your selection.</p>
+                        </div>
+                        <div style="display: flex; align-items: center; gap: var(--ten-units);">
+                            <a class="proset-button">
+                                <span>Clear</span>
+                            </a>
+                            <p>(Escape key) Clears your selection.</p>
+                        </div>
+                        <div style="display: flex; align-items: center; gap: var(--ten-units);">
+                            <a class="proset-button">
+                                <span>Reveal</span>
+                            </a>
+                            <p>(&quot;R&quot; key) Reveals a solution.</p>
+                        </div>
+                        <p>Revealing a solution disables scoring for those cards.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="scripts/main.js"></script>
 </body>
