--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>ProSet</title>
     <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=0.86">
+    <meta name="viewport" content="width=device-width, initial-scale=0.86, user-scalable=no">
+    <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
@@ -42,7 +43,7 @@
     </div>
     <div class="about-modal" id="about-modal">
         <div class="about-content">
-            <div>
+            <div style="width: 100%; display: flex; flex-direction: reverse-row; position: sticky;">
                 <span class="about-close" id="about-close">&times;</span>
             </div>
             <div class="about-item">
