--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ProSet</title>
-    <meta name="author" content="">
+    <meta name="description" content="ProSet (Projective Set) is a mathematical take on the classic game of Set. Put your logical reasoning skills to the test with this multicolored card game experience!">
     <meta name="viewport" content="width=device-width, initial-scale=0.86, user-scalable=no">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
