--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>ProSet</title>
     <meta name="description" content="ProSet (Projective Set) is a mathematical take on the classic game of Set. Put your logical reasoning skills to the test with this multicolored card game experience!">
     <meta name="viewport" content="width=device-width, initial-scale=0.86, user-scalable=no">
+
+    <meta property="og:title" content="ProSet">
+    <meta property="og:site_name" content="ProSet Game">
+    <meta property="og:url" content="https://www.prosetgame.com">
+    <meta property="og:description" content="ProSet (Projective Set) is a mathematical take on the classic game of Set. Put your logical reasoning skills to the test with this multicolored card game experience!">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="android-chrome-512x512.png">
+
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
