--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://www.prosetgame.com">
     <meta property="og:description" content="ProSet (Projective Set) is a mathematical take on the classic game of Set. Put your logical reasoning skills to the test with this multicolored card game experience!">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="android-chrome-512x512.png">
+    <meta property="og:image" content="https://www.prosetgame.com/android-chrome-512x512.png">
 
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
