added reset button

--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
                         </div>
                         <p>Revealing a solution disables scoring for those cards.</p>
                     </div>
+
+                    <h1>Settings</h1>
+                    <hr noshade>
+                    <div>
+                        <p>Warning: Some of the following settings are irreversible.</p>
+                        <div style="display: flex; align-items: center; gap: var(--ten-units);">
+                            <a class="proset-button" id="reset-button">
+                                <span>Reset</span>
+                            </a>
+                            <p>Resets the cards, in case of error.</p>
+                        </div>
                 </div>
             </div>
         </div>
