restructured card layout to be responsive

--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
                 <span class="proset-score" id="score-num">0</span>
             </div>
         </div>
-        <div class="proset-rows" id="proset-rows">
-            <div class="proset-row" id="proset-row-0"></div>
-            <div class="proset-row" id="proset-row-1"></div>
-            <div class="proset-row" id="proset-row-2"></div>
+        <div class="proset-content" id="proset-content">
+            <div class="proset-cards" id="proset-cards"></div>
             <div class="proset-buttons" id="proset-buttons"></div>
         </div>
     </div>
